Atualização Geral do App

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "gestao-imobiliaria-app",
+    "name": "SV Imobiliária",
     "slug": "gestao-imobiliaria-app",
     "version": "1.0.0",
     "orientation": "portrait",
