--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
+    "axios": "^1.9.0",
     "expo": "~53.0.9",
+    "expo-document-picker": "^13.1.5",
+    "expo-image-picker": "~16.1.4",
+    "expo-media-library": "~17.1.6",
+    "expo-sharing": "~13.1.5",
     "expo-sqlite": "^15.2.10",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
@@ -21,10 +26,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-share": "^12.0.11",
-    "react-native-swiper": "^1.6.0",
-    "expo-image-picker": "~16.1.4",
-    "expo-media-library": "~17.1.6",
-    "expo-sharing": "~13.1.5"
+    "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
