--- a/package.json
+++ b/package.json
@@ -4,32 +4,36 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
     "axios": "^1.9.0",
     "expo": "~53.0.9",
-    "expo-document-picker": "^13.1.5",
+    "expo-dev-client": "~5.1.8",
     "expo-image-picker": "~16.1.4",
-    "expo-media-library": "~17.1.6",
-    "expo-sharing": "~13.1.5",
-    "expo-sqlite": "^15.2.10",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-share": "^12.0.11",
-    "react-native-swiper": "^1.6.0"
+    "react-native-swiper": "^1.6.0",
+    "expo-sqlite": "~15.2.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0",
+    "@react-native-community/cli-platform-android": "^18.0.0",
+    "@react-native/gradle-plugin": "^0.79.2"
   },
   "private": true
 }
