--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "expo-sharing": "~13.1.5",
     "expo-sqlite": "^15.2.10",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "^5.0.7",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-image-picker": "^8.2.1",
