--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "^1.9.0",
     "expo": "~53.0.9",
     "expo-dev-client": "~5.1.8",
+    "expo-document-picker": "^13.1.5",
     "expo-image-picker": "~16.1.4",
+    "expo-sqlite": "~15.2.10",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
     "react": "19.0.0",
@@ -26,8 +28,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-share": "^12.0.11",
-    "react-native-swiper": "^1.6.0",
-    "expo-sqlite": "~15.2.10"
+    "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
