--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-share": "^12.0.11",
-    "react-native-swiper": "^1.6.0"
+    "react-native-swiper": "^1.6.0",
+    "expo-file-system": "~18.1.10",
+    "expo-intent-launcher": "~12.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
