--- a/package.json
+++ b/package.json
@@ -10,26 +10,19 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
-    "@react-navigation/stack": "^7.3.2",
-    "axios": "^1.9.0",
     "expo": "~53.0.9",
-    "expo-dev-client": "~5.1.8",
     "expo-document-picker": "^13.1.5",
     "expo-image-picker": "~16.1.4",
     "expo-sqlite": "~15.2.10",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.7",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-swiper": "^1.6.0",
-    "expo-file-system": "~18.1.10",
-    "expo-intent-launcher": "~12.1.4"
+    "expo-file-system": "~18.1.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
